load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_test")
load("@my_requirements//:requirements.bzl", "requirement")

compile_pip_requirements(
    name = "requirements",
    extra_args = [
        "--allow-unsafe",
        "--resolver=backtracking",
    ],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = [
        "manual",
    ],
)

py_test(
    name = "fs_providers_test",
    srcs = ["fs_providers_test.py"],
    deps = [
        requirement("fs.sshfs"),
        requirement("fs.s3fs"),
    ],
)

py_test(
    name = "nvidia_submodules_test_blas_only",
    srcs = ["nvidia_submodules_test_blas_only.py"],
    deps = [
        requirement("nvidia_cublas_cu11"),
    ],
)

py_test(
    name = "nvidia_submodules_test_cuda_cupti_only",
    srcs = ["nvidia_submodules_test_cuda_cupti_only.py"],
    deps = [
        requirement("nvidia_cuda_cupti_cu11"),
    ],
)

py_test(
    name = "nvidia_submodules_test",
    srcs = ["nvidia_submodules_test.py"],
    deps = [
        requirement("nvidia_cublas_cu11"),
        requirement("nvidia_cuda_cupti_cu11"),
    ],
)
